objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>HealthCloudGA__Patient Referral</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Diagnosis__c</fullName>
        <description>Comma-delimited list of diagnoses or ICD codes associated with the referral.</description>
        <label>Diagnosis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InsuranceGroupId__c</fullName>
        <description>Group ID of the patient&apos;s insurance.</description>
        <label>Insurance Group ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InsuranceMemberId__c</fullName>
        <description>Member ID of the patient&apos;s insurance.</description>
        <label>Insurance Member ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InsuranceType__c</fullName>
        <description>Type of primary insurance: Medicare, Medicaid, Commercial or Self-Pay</description>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Self-pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsOutOfNetwork__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the referral is out of network.</description>
        <label>Out of Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Primary_Insurance__c</fullName>
        <description>Primary health insurance company associated with the patient.</description>
        <label>Primary Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Priority__c</fullName>
        <description>Priority of the referral as designated by the referring provider.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergent</fullName>
                </value>
                <value>
                    <fullName>Routine</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonForOutOfNetworkReferral__c</fullName>
        <description>Reason the referral is sent out of network.</description>
        <label>Reason for Out of Network Referral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provider Preference</fullName>
                </value>
                <value>
                    <fullName>Patient Preference</fullName>
                </value>
                <value>
                    <fullName>Limited Provider Availability</fullName>
                </value>
                <value>
                    <fullName>Service Not Offered</fullName>
                </value>
                <value>
                    <fullName>Insurance Not Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Reason_for_Referral__c</fullName>
        <description>Reason for the referral.</description>
        <label>Reason for Referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferralReceivedDate__c</fullName>
        <description>Date referral was received by the Organization</description>
        <label>Referral Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferredToOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the organization receiving or fulfilling the referral.</description>
        <label>Referred To Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referred Opportunities</relationshipLabel>
        <relationshipName>ReferredOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferredToPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the practitioner to whom the patient is being referred.</description>
        <label>Referred To Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referred Opportunities</relationshipLabel>
        <relationshipName>ReferredOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferredToUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the user to whom the referral is sent.</description>
        <label>Referred To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReferredOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the referring organization.</description>
        <label>Referring Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the practitioner who submitted the referral.</description>
        <label>Referring Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the user who submitted the referral.</description>
        <label>Referring User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty__c</fullName>
        <description>Specialty associated with the referral.</description>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Neurosurgery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeOfService__c</fullName>
        <description>Type of service requested.</description>
        <label>Type of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>2nd Opinion</fullName>
                </value>
                <value>
                    <fullName>Radiology Services</fullName>
                </value>
                <value>
                    <fullName>Lab Services</fullName>
                </value>
                <value>
                    <fullName>Follow up</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Other (please specify in comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>HealthCloudGA__AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>HealthCloudGA__OpenReferrals</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>HealthCloudGA__Specialty__c</columns>
        <columns>HealthCloudGA__Priority__c</columns>
        <columns>HealthCloudGA__ReferringOrganization__c</columns>
        <columns>HealthCloudGA__ReferringPractitioner__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.HealthCloudGA__Patient_Referral</value>
        </filters>
        <label>Open Referrals</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>HealthCloudGA__Patient_Referral</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Patient Referral</businessProcess>
        <label>Patient Referral</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>